--- a/portfolio.html
+++ b/portfolio.html
@@ -6,16 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -72,11 +65,8 @@
             <button class="projects-button" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
 
       <!-- примеры работ -->
-      <section class="jobs">
-        <h2 class="jobs-title">Наши работы</h2>
         <ul class="jobs-list list">
           <li class="jobs-item">
             <a class="jobs-link link" href="./index.html">
@@ -86,7 +76,7 @@
                 alt="bank-app screenshot"
                 width="360"
               />
-              <h3 class="jobs-aftertitle">Banking App Interface Concept</h3>
+              <h2 class="jobs-aftertitle">Banking App Interface Concept</h2>
               <p class="jobs-paragraph">App</p>
             </a>
           </li>
@@ -98,7 +88,7 @@
                 alt="cashless payment screen"
                 width="360"
               />
-              <h3 class="jobs-aftertitle">Cashless Payment</h3>
+              <h2 class="jobs-aftertitle">Cashless Payment</h2>
               <p class="jobs-paragraph">Marketing</p>
             </a>
           </li>
@@ -110,7 +100,7 @@
                 alt="desktop and mobile aplications screens"
                 width="360"
               />
-              <h3 class="jobs-aftertitle">Meditation app</h3>
+              <h2 class="jobs-aftertitle">Meditation app</h2>
               <p class="jobs-paragraph">App</p>
             </a>
           </li>
@@ -122,7 +112,7 @@
                 alt="Taxi image"
                 width="360"
               />
-              <h3 class="jobs-aftertitle">Taxi service</h3>
+              <h2 class="jobs-aftertitle">Taxi service</h2>
               <p class="jobs-paragraph">Marketing</p>
             </a>
           </li>
@@ -134,7 +124,7 @@
                 alt="mobile app screen illustration"
                 width="360"
               />
-              <h3 class="jobs-aftertitle">Screen Illustrations</h3>
+              <h2 class="jobs-aftertitle">Screen Illustrations</h2>
               <p class="jobs-paragraph">Design</p>
             </a>
           </li>
@@ -145,7 +135,7 @@
                 src="./images/online-courses.jpg"
                 alt="girl with headphones"
               />
-              <h3 class="jobs-aftertitle">Online courses</h3>
+              <h2 class="jobs-aftertitle">Online courses</h2>
               <p class="jobs-paragraph">Marketing</p>
             </a>
           </li>
@@ -157,7 +147,7 @@
                 alt="instagram stories design"
                 width="360"
               />
-              <h3 class="jobs-aftertitle">Instagram Stories Concept</h3>
+              <h2 class="jobs-aftertitle">Instagram Stories Concept</h2>
               <p class="jobs-paragraph">Design</p>
             </a>
           </li>
@@ -169,7 +159,7 @@
                 alt="healthy food"
                 width="360"
               />
-              <h3 class="jobs-aftertitle">Organic Food</h3>
+              <h2 class="jobs-aftertitle">Organic Food</h2>
               <p>Web Site</p>
             </a>
           </li>
@@ -181,7 +171,7 @@
                 alt="fresh-coffee"
                 width="360"
               />
-              <h3 class="jobs-aftertitle">Fresh Coffee</h3>
+              <h2 class="jobs-aftertitle">Fresh Coffee</h2>
               <p class="jobs-paragraph">Web Site</p>
             </a>
           </li>
